--- a/www/src/css/quasar.variables.sass
+++ b/www/src/css/quasar.variables.sass
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2
-$secondary : #26A69A
-$accent    : #9C27B0
+$primary   : #210F37
+$secondary : #4F1C51
+$accent    : #A55B4B
 
 $dark      : #1D1D1D
 $dark-page : #121212
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$positive  : #36C450
+$negative  : #FF6E4E
+$info      : #0B57CE
+$warning   : #FFCE22
